PCS BAckup 26Dec2023/Backup-Source/objects/Compliance_Data__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Sales__c</fullName>
        <label>Actual Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awarded_Information__c</fullName>
        <label>Awarded Information</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awarded_Position__c</fullName>
        <label>Awarded Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cus_Code__c</fullName>
        <formula>Vision_Customer__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cus Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Backorder_OTC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backorder OTC</label>
        <referenceTo>Vision_GCP_Backorder_OTC__c</referenceTo>
        <relationshipLabel>Compliance Data</relationshipLabel>
        <relationshipName>Compliance_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCP_Backorder_SRx_Rx__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backorder SRx Rx</label>
        <referenceTo>Vision_GCP_Backorder_SRx_Rx__c</referenceTo>
        <relationshipLabel>Compliance Data</relationshipLabel>
        <relationshipName>Compliance_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Category__c</fullName>
        <label>General Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Int_Unique_Identifier__c</fullName>
        <formula>IF(AND(ISNULL( Vision_Product__r.ProductCode ), ISNULL( Vision_Customer__r.AccountNumber )), null,Vision_Customer__r.AccountNumber+&quot;-&quot;+Vision_Product__r.ProductCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Int Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Unique_Identifier__c</fullName>
        <formula>IF(AND(ISNULL( Vision_Product__r.ProductCode ), ISNULL( Vision_Customer__r.AccountNumber ),ISNULL(Contract_Type__c )), null,Vision_Product__r.ProductCode+&quot;_&quot;+Vision_Customer__r.AccountNumber+&quot;_&quot;+Contract_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_in_Openorder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is in Openorder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M10_Quantity__c</fullName>
        <label>M10 Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11_Quantity__c</fullName>
        <label>M11 Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12_Quantity__c</fullName>
        <label>M12_Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month10__c</fullName>
        <label>Month10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month11__c</fullName>
        <label>Month11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month12__c</fullName>
        <label>Month12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPR_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPR Data</label>
        <referenceTo>Phoenix_NPR_Data__c</referenceTo>
        <relationshipLabel>Compliance Data</relationshipLabel>
        <relationshipName>Compliance_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Effective_Date__c</fullName>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Position__c</fullName>
        <label>Product Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Effective_Date__c</fullName>
        <label>Supply Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Compliance Data</relationshipLabel>
        <relationshipName>Compliance_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Compliance Data</relationshipLabel>
        <relationshipName>Compliance_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Compliance Data</relationshipLabel>
        <relationshipName>Compliance_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Compliance Data</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Compliance Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>